--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.18"
+    "knex": "^2.1.0",
+    "nodemon": "^2.0.18",
+    "pg": "^8.7.3"
   }
 }
