--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
+    "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.1.0",
